...
      baseUri: baseUri,
      path: path,
      pathSegments: pathSegments,
      queryParameters: queryParameters,
      baseUrl: baseUrl,
    );
    final censored = body?.contains('password') == true ? '{***}' : body;

    logger.finer(
      '=> ${method.name.toUpperCase()} ${uri.path} ${uri.queryParametersAll.isNotEmpty ? uri.queryParametersAll : '-'} ${censored ?? '-'}',
    );
    final res = await method.toFn(client).when(
          get: (fn) async => await fn.call(uri, headers: headers),
...
    String password,
  ) async =>
      await _send<String>(
        method: HttpMethod.post,
        path: '/api/v1/auth/user/signin',
        body: json.encode({
          'email': email,
          'password': password,
        }),
        httpClient:
            http.Client(), // This function should use plain HTTP client.
        headers: {'Content-type': 'application/json'},
        expectedStatusCode: [200],
...
