...
  const ProjectListPage({super.key});

  Widget _buildScaffold(Widget body) {
    final context = useContext();
    return Scaffold(
      appBar: AppBar(
        title: const Text('Projects'),
        actions: [
          PopupMenuButton(
            icon: const Icon(Icons.account_circle),
            itemBuilder: (context) => <PopupMenuEntry>[
              PopupMenuItem(
                child: const ListTile(
...
